<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >   

    <EditText
        android:id="@+id/val1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/val1"
        android:inputType="number" 
        android:nextFocusDown="@+id/val2" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/val2"
        android:layout_below="@+id/val2"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/resultado"
        android:inputType="number" />

    <EditText
        android:id="@+id/val2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/val1"
        android:layout_below="@+id/val1"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/val2"
        android:inputType="number"
        android:nextFocusDown="@+id/operate" />

    <Button
        android:id="@+id/one"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cero"
        android:layout_alignBottom="@+id/cero"
        android:layout_alignRight="@+id/multiply"
        android:layout_marginRight="18dp"
        android:text="@string/uno" />

    <Button
        android:id="@+id/focus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/one"
        android:layout_alignBottom="@+id/one"
        android:layout_alignLeft="@+id/multiply"
        android:layout_marginLeft="32dp"
        android:text="@string/foco" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cero"
        android:layout_alignRight="@+id/result"
        android:text="@string/div" />

    <Button
        android:id="@+id/operate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/divide"
        android:layout_marginBottom="44dp"        
        android:text="@string/igual" />

    <Button
        android:id="@+id/cero"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/operate"
        android:layout_marginBottom="21dp"
        android:layout_toLeftOf="@+id/one"
        android:text="@string/cero" />

    <Button
        android:id="@+id/multiply"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/divide"
        android:layout_toLeftOf="@+id/divide"
        android:text="@string/mult" />

    <Button
        android:id="@+id/add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/multiply"
        android:layout_alignBottom="@+id/multiply"
        android:layout_toLeftOf="@+id/deduct"
        android:text="@string/mas" />

    <Button
        android:id="@+id/deduct"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/multiply"
        android:layout_alignBottom="@+id/multiply"
        android:layout_toLeftOf="@+id/multiply"
        android:text="@string/menos" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/multiply"
        android:layout_marginBottom="15dp"
        android:layout_toRightOf="@+id/cero"
        android:text="@string/operation" />

    <Button
        android:id="@+id/reset"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/operate"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/operate"
        android:text="@string/rese" />

</RelativeLayout>